[workspace]
members = [
    "lib",
    "derive",
]
resolver = "2"

[workspace.package]
version = "0.16.4"
edition = "2021"
authors = ["Antonio Yang <yanganto@gmail.com>", "faervan <faervan@proton.me>"]
license = "MIT"
description = "A lib help generate toml example"
repository = "https://github.com/yanganto/toml-example"
keywords = ["toml", "example", "document"]
categories = [ "parser-implementations", "parsing", "config" ]
readme = "README.md"
