[package]
name = "toml-example"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
toml-example-derive = { version = "=0.3", path = "../derive" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.7"
